--- a/src/style.css
+++ b/src/style.css
@@ -340,6 +340,7 @@ footer {
   width: 200px;
   gap: 20px;
   margin: auto;
+  padding-bottom: 150px;
 }
 
 .cart-details {
@@ -355,7 +356,7 @@ footer {
   display: flex;
   background-color: black;
   justify-content: space-between;
-  width: 600px;
+  width: 700px;
   height: 205px;
 }
 
@@ -489,7 +490,8 @@ footer {
   padding: 30px 0px;
   margin-top: 20px;
   background-color: black;
-  display: none;
+  /* display: none; */
+  
 }
 
 .add-product-header button {
